ISS-11-17-46 - Fixed internal Nav Spacing

--- a/styles/faqs.css
+++ b/styles/faqs.css
@@ -100,6 +100,6 @@ sup {
 
 @media screen and (min-width: 1024px) {
   [data-module=PageSubnav] .pagesubnavcntr span>button {
-    margin-right: 35px;
+    /* margin-right: 46px; */
   }
 }
